--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,40 @@
-<p>header works!</p>
+<mat-toolbar color="primary">
+  <button mat-button (click)="onClickNavToggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>MYPOS</span>
+  <span class='flex-fill'></span>
+  <div class="d-flex align-items-center">
+    <button mat-button aria-label="Example icon button with a heart icon">
+      <mat-icon>search</mat-icon>
+    </button>
+    <div class="vl"></div>
+    <button mat-button aria-label="Example icon button with a heart icon">
+      <mat-icon [matBadge]="demoMailNoti" matBadgeColor="accent">mail_outline</mat-icon>
+    </button>
+    <div class="vl"></div>
+    <button mat-button aria-label="Example icon button with a heart icon">
+      <mat-icon [matBadge]="demoNoti" matBadgeColor="warn">notifications_none</mat-icon>
+    </button>
+  </div>
+
+  <button mat-button [matMenuTriggerFor]="menu">
+    <img class="avatar rounded-circle bg-white" [src]="imageURL" alt="">
+    <span class="ml-2">Admin iBlurBlur</span>
+  </button>
+  <mat-menu #menu="matMenu">
+    <button mat-menu-item>
+      <mat-icon>dialpad</mat-icon>
+      <span>Redial</span>
+    </button>
+    <button mat-menu-item disabled>
+      <mat-icon>voicemail</mat-icon>
+      <span>Check voice mail</span>
+    </button>
+    <button mat-menu-item>
+      <mat-icon>exit_to_app</mat-icon>
+      <span>Logout</span>
+    </button>
+  </mat-menu>
+
+</mat-toolbar>
