--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
-<mat-sidenav-container class="example-container">
-  <mat-sidenav #sidenav mode="side" opened="false">
-    <button mat-button>Click</button>
-    <button mat-button>Click</button>
+<mat-sidenav-container fullscreen>
+  <mat-sidenav #sidenav [mode]="mobileQueryMax.matches ? 'over' : 'side' " [opened]="mobileQueryMax.matches ? false : true">
+    <app-side-nav></app-side-nav>
   </mat-sidenav>
   <mat-sidenav-content>
-    <app-header (toggle)="sidenav.toggle()" (sayHi)="onSayHi($event)"></app-header>
+    <app-header [media_query]="mobileQueryMax.matches" (toggle)="sidenav.toggle()" (sayHi)="onSayHi($event)"></app-header>
+    <div class="content-wrapper">
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
