Filter, Sorting, Paginator, Stock Create

--- a/src/app/side-nav/side-nav.component.html
+++ b/src/app/side-nav/side-nav.component.html
@@ -1,6 +1,6 @@
 <img class="img-fluid bg-primary shodow-sm" src="https://angular.io/assets/images/logos/angular/angular.png" alt="">
 <mat-nav-list dense class="mt-2">
-  <a mat-list-item href="http://www.google.com">
+  <a mat-list-item href="#" [routerLink]="['/stock']">
     <span mat-line>
       <span class="mat-h4">
         Stock
