getData , delete ,create product by api

--- a/frontend/src/app/stock/stock-home/stock-home.component.html
+++ b/frontend/src/app/stock/stock-home/stock-home.component.html
@@ -48,7 +48,7 @@
       <td mat-cell *matCellDef="let data">
         <div class="over-lay mx-auto d-block border-top border-left border-right rounded-top">
           <img src="{{ data.image }}" class="w-100 bg-light rounded-top" alt="">
-          <div class="over-lay-text text-center mat-small">1150</div>
+          <div class="over-lay-text text-center mat-small">{{data.id}}</div>
         </div>
       </td>
     </ng-container>
@@ -74,7 +74,7 @@
         <button mat-icon-button>
           <mat-icon class="material-icons-outlined">edit</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="onClickDeleteProduct(data)">
           <mat-icon>delete_outline</mat-icon>
         </button>
       </td>
