--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -5,6 +5,7 @@
   <mat-sidenav-content>
     <app-header [media_query]="mobileQueryMax.matches" (toggle)="sidenav.toggle()" (sayHi)="onSayHi($event)"></app-header>
     <div class="content-wrapper">
+      <app-progress [mode]="'determinate'"></app-progress>
       <router-outlet></router-outlet>
     </div>
   </mat-sidenav-content>
