--- a/frontend/src/app/stock/stock-create/stock-create.component.html
+++ b/frontend/src/app/stock/stock-create/stock-create.component.html
@@ -1,7 +1,9 @@
 <mat-card>
   <form #productForm="ngForm" (submit)="onSubmit(productForm)">
     <mat-card-header>
-      <mat-card-title class="d-flex justify-content-between align-items-center w-100">
+      <mat-card-title
+        class="d-flex justify-content-between align-items-center w-100"
+      >
         <span>Create Product</span>
         <button mat-raised-button color="primary" type="submit">Submit</button>
       </mat-card-title>
@@ -12,34 +14,40 @@
         <div class="col-md-6">
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Name</mat-label>
-            <input ngModel name="name" matInput required>
+            <input ngModel name="name" matInput required />
           </mat-form-field>
         </div>
         <div class="col-md-3">
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Price</mat-label>
-            <input ngModel name="price" matInput type="number" required>
+            <input ngModel name="price" matInput type="number" required />
           </mat-form-field>
         </div>
         <div class="col-md-3">
           <mat-form-field class="w-100" appearance="outline">
             <mat-label>Stock</mat-label>
-            <input ngModel name="stock" matInput type="number" required>
+            <input ngModel name="stock" matInput type="number" required />
           </mat-form-field>
         </div>
       </div>
       <div class="row mt-3">
         <div class="col-md-4" *ngIf="imagePreview">
-          <img class="img-fluid border" [src]="imagePreview" alt="">
+          <img class="img-fluid border" [src]="imagePreview" alt="" />
         </div>
         <div class="col-md-8">
           <button mat-stroked-button type="button" (click)="fileInput.click()">
             <mat-icon>photo</mat-icon>
             <span>Select image</span>
           </button>
-          <input (change)="onPrviewImage($event)" #fileInput type="file" accept="image/*">
+          <input
+            (change)="onPrviewImage($event)"
+            #fileInput
+            type="file"
+            accept="image/*"
+          />
         </div>
       </div>
+      
     </mat-card-content>
   </form>
 </mat-card>
