--- a/frontend/src/app/stock/stock-home/stock-home.component.html
+++ b/frontend/src/app/stock/stock-home/stock-home.component.html
@@ -71,7 +71,7 @@
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef class="text-center">Action</th>
       <td mat-cell *matCellDef="let data" class="text-center">
-        <button mat-icon-button>
+        <button mat-icon-button [routerLink]="['/stock/edit', data.id]">
           <mat-icon class="material-icons-outlined">edit</mat-icon>
         </button>
         <button mat-icon-button (click)="onClickDeleteProduct(data)">
